# diskpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.old  LICENSE.md  README.md  README.md.x  config.h.in  contrib  diskpp_git_revision.h.in
apps/: CMakeLists.txt  CMakeLists.txt.old  newapp.sh
apps/LerayLions/: CMakeLists.txt  Informations.hpp  LerayLions.cpp  LerayLions_elementary_computation.hpp  LerayLions_solver.hpp  LerayLions_test_convergence_rates.cpp  Parameters.hpp
apps/acoustic_eigs/: CMakeLists.txt
apps/app_template/: CMakeLists.txt  app_template.cpp
apps/barycenter_test/: CMakeLists.txt  barycenter_test.cpp
apps/bingham/: CMakeLists.txt  bingham_driven.lua  bingham_driven_higher.lua  bingham_vector.cpp  bingham_vector_higher.cpp  bingham_vector_higher_solver.hpp  bingham_vector_solver.hpp  prepare_sims.pl  test_norm.cpp  viscoplasticity_utils.hpp
apps/cfem/: CMakeLists.txt  cfem.cpp
apps/conditioning/: CMakeLists.txt
apps/contact/: BoundaryConditions.hpp  CMakeLists.txt  common.hpp  common_temporal.hpp  contac_hierarchical.lua  contact_hho.hpp  contact_hierarchical.lua  diffusion_mix.cpp  diffusion_mix_solver.hpp  diffusion_nitsche.cpp  diffusion_nitsche_borrar.cpp  diffusion_nitsche_solver.hpp  diffusion_nitsche_test.cpp  diffusion_nitzche.cpp  diffusion_nitzche_solver.hpp  diffusion_nitzche_test.cpp  methods_hho.hpp  signorini-fix.edp  signorini-newton.edp  signorini.cpp  signorini.edp  signorini_cfem_fix.cpp  signorini_cfem_newton.cpp  signorini_fem_fix_point.cpp  signorini_fix.cpp  signorini_fix_point.cpp  signorini_hierarchical_newton.cpp  signorini_newton.cpp  signorini_newton_parameter.cpp  signorini_newton_solver.hpp  signorini_newton_solver_new.hpp  signorini_newton_test.cpp  signorini_solver.hpp
apps/diffusion/: CMakeLists.txt  diffusion.cpp  diffusion.hpp  diffusion_alg.cpp  diffusion_dg.cpp  diffusion_dga.cpp  diffusion_hho.cpp  diffusion_hho_test.cpp  diffusion_low_grad.cpp  diffusion_low_grad_vector.cpp  diffusion_new.cpp  diffusion_solver.hpp  diffusion_test.cpp  plotpoly.lua  variable_diffusion_hho.cpp
apps/diffusion2/: CMakeLists.txt  diffusion2.cpp  diffusion2_solver.hpp  diffusion2_test.cpp  diffusion2_test_convergence_rates.cpp
apps/diffusion_RT/: CMakeLists.txt  diffusion_RT.cpp  diffusion_RT_solver.hpp  diffusion_RT_test_convergence_rates.cpp
apps/diskpp_tutorials/: CMakeLists.txt  diskpp_tutorial_1.cpp  diskpp_tutorial_2.cpp  diskpp_tutorial_3.cpp  diskpp_tutorial_4.cpp  tutorial4_twodom.geo2s  tutorial_list.md
apps/elasticity/: CMakeLists.txt  elasticity.cpp  elasticity.hpp
apps/exemple_visualisation/: CMakeLists.txt  exemple_visualisation.cpp  exemple_visualisation_solver.hpp
apps/finite_strains/: CMakeLists.txt  Parameters.hpp  finite_strains.cpp  finite_strains_solver.hpp
apps/fvca2netgen/: CMakeLists.txt  fvca2netgen.cpp
apps/fvca5_meshinfo/: CMakeLists.txt  MeshWidget.cpp  MeshWidget.h  fvca5_meshinfo.cpp
apps/helmholtz/: CMakeLists.txt  helmholtz.cpp
apps/hexagon_splitter/: CMakeLists.txt  hexagon_splitter.cpp
apps/hho_conditioning/: hho_conditioning.cpp
apps/hho_dd/: CMakeLists.txt
apps/integration/: CMakeLists.txt  integration.cpp
apps/intissar/: BoundaryConditionsRobin.hpp  CMakeLists.txt  diffusion_hho.cpp  diffusion_test.cpp  methods_hho_scalar_neumann.hpp
apps/linear_elasticity/: CMakeLists.txt  linear_elasticity.cpp  linear_elasticity_solver.hpp  linear_elasticity_test.cpp
apps/maxwell/: CMakeLists.txt  compinfo.h  maxwell.cpp  maxwell_sip_dg.cpp  maxwell_solver_hho.cpp  maxwell_td.cpp  meshio.cpp  modeconv.geo  mumps_main.cpp  paramloader.hpp  rectest.cpp
apps/mesh_basic_tests/: CMakeLists.txt  MeshWidget.cpp  MeshWidget.h  fvca5_meshinfo.cpp  mesh_basic_tests.cpp  mesh_cube_diffusive_test.cpp  mesh_debug.hpp  netgen_2d_test.cpp  submesher_test.cpp
apps/mesh_new/: CMakeLists.txt  mesh_new.cpp
apps/multiscale/: CMakeLists.txt  multiscale.cpp  reference_solver.cpp
apps/netgen_bnd_test/: CMakeLists.txt  netgen_bnd_test.cpp
apps/new_code_test/: CMakeLists.txt  integrals.py  new_code_test.cpp  test_bases.cpp
apps/newstab/: CMakeLists.txt  newstab.cpp
apps/nitsche/: CMakeLists.txt
apps/nonlinear_elasticity/: CMakeLists.txt  Parameters.hpp  nonlinear_elasticity.cpp  nonlinear_elasticity_solver.hpp  nonlinear_elasticity_tests.cpp
apps/nonlinear_solid_mechanics/: CMakeLists.txt  contact_test.cpp  elasticity_test.cpp  nonlinear_solid_mechanics.cpp
apps/obstacle/: CMakeLists.txt  obstacle.cpp
apps/parallel_diffusion/: CMakeLists.txt  parallel_diffusion.cpp
apps/plasticity/: CMakeLists.txt  Informations.hpp  Parameters.hpp  plasticity.cpp  plasticity_solver.hpp  plasticity_test.cpp
apps/poisson_solver/: CMakeLists.txt  hierarchical_eigval_solver.cpp  poisson_solver.1  poisson_solver.cpp
apps/run_pardiso/: CMakeLists.txt
apps/solution_plotter/: CMakeLists.txt  solution_plotter.cpp
apps/stabfree/: CMakeLists.txt
apps/steklov_eigs/: CMakeLists.txt
apps/stokes/: CMakeLists.txt  stokes.cpp  stokes_alg.cpp  stokes_alg_driven_cavity.cpp  stokes_alg_improvements.cpp  stokes_alg_no_div.cpp  stokes_alg_sym.cpp  stokes_driven_cavity.cpp  stokes_low_grad.cpp  stokes_over_cylinder.cpp
apps/test_bases/: CMakeLists.txt  test_bases.cpp
apps/tests/: CMakeLists.txt  bases_new.cpp  basis_function_plot.cpp  basis_quadratures.cpp  behaviors_test.cpp  common.hpp  conditionning_basis.cpp  curl_interpolation.cpp  dga.cpp  meshgen.cpp  (+31 more)
contrib/: CMakeLists.txt  colormanip.cpp  colormanip.h  earcut.hpp  get_eigen.sh  mapped_file.cpp  mapped_file.h  simpleps.cpp  simpleps.h  timecounter.cpp  timecounter.h
libdiskpp/: CMakeLists.txt
unit_tests/: CMakeLists.txt  dga_geom.cpp  dga_matrices.cpp  harmonic.cpp  monomial_bases_1D.cpp  monomial_bases_2D.cpp  primitives.cpp  quad_raw_dunavant.cpp  quad_raw_gauss_lobatto.cpp  quad_raw_gm_triangles.cpp  quad_raw_tensorized_gl.cpp  quad_raw_tetra.cpp  quad_raw_triangle_gauss.cpp  quadratures.cpp  quadratures_divthm.cpp  simple_mesher_3D.cpp  simple_meshers_2D_boundary_numbering.cpp
utils/: CMakeLists.txt  cubemesh.cpp  med2poly.py
(+906 files in other folders)
